--- a/app/src/main/res/layout/item_chat_other.xml
+++ b/app/src/main/res/layout/item_chat_other.xml
@@ -10,6 +10,7 @@
         android:background="@color/pink"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:layout_marginLeft="10dp"
         android:text="test message"
         android:textColor="@android:color/white"
         android:clickable="true"
@@ -17,13 +18,16 @@
         android:layout_toRightOf="@+id/ivProfileImage"
         android:layout_centerVertical="true"/>
 
-    <ImageView
+    <org.chicktech.chicktech.views.RoundedImageView
         android:id="@+id/ivProfileImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_launcher"
+        android:src="@drawable/chicktech_icon_android"
         />
 
 </RelativeLayout>
