Deal with zero RSVPs in list. close #79

--- a/app/src/main/res/layout/fragment_people_list.xml
+++ b/app/src/main/res/layout/fragment_people_list.xml
@@ -22,4 +22,16 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="No RSVPs Yet"
+        android:id="@+id/tvNoRsvpsYet"
+        android:visibility="gone"
+        android:textColor="@color/brown"
+        android:textSize="24dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
