--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -119,4 +119,81 @@
                 android:textColor="@color/darkGray" />
         </LinearLayout>
     </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/relativeLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Powered By"
+            android:textColor="@color/teal"
+            android:textSize="26dp"
+            android:layout_marginTop="25dp"
+            android:id="@+id/tvHelpTitle" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Jing Jin"
+            android:textColor="@color/brown"
+            android:textSize="18dp"
+            android:id="@+id/tvJing" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Kenan Pulak"
+            android:textColor="@color/brown"
+            android:textSize="18dp"
+            android:id="@+id/tvKenan" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Paul Lamoreux"
+            android:textColor="@color/brown"
+            android:textSize="18dp"
+            android:id="@+id/tvPaul" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Nicole Borrelli"
+            android:textColor="@color/brown"
+            android:textSize="18dp"
+            android:id="@+id/tvNicole" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Dhwani Dagli"
+            android:textColor="@color/brown"
+            android:textSize="18dp"
+            android:id="@+id/tvDhwani" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Jingxi Li"
+            android:textColor="@color/brown"
+            android:textSize="18dp"
+            android:id="@+id/tvJingxi" />
+    </LinearLayout>
 </RelativeLayout>
