Add another notification button for organizer
remind people to GO to event. first notification is to RSVP.

--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -297,6 +297,15 @@
                 android:layout_below="@+id/tvEventDescription"
                  />
 
+            <Button
+                android:id="@+id/btnPushGoReminder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Send GO Notification"
+                android:layout_below="@+id/btnPushRsvpReminder"
+                android:layout_marginBottom="25dp"
+                />
+
             <TextView
                 android:id="@+id/tvPeopleTitle"
                 android:layout_width="match_parent"
