--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -13,13 +13,12 @@
         android:textColor="@color/brown"
         android:textSize="20sp"
         android:layout_alignParentTop="true"
-        android:background="@drawable/gradient_white"
+        android:background="@color/white"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:maxLines="1"
         android:gravity="center_horizontal"
         />
-
 
     <LinearLayout
         android:id="@+id/llMenu"
