--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -18,20 +18,39 @@
         />
 
 
-    <TextView
-        android:id="@+id/tvEventName"
+    <FrameLayout
+        android:id="@+id/flBlack"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="false"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/gradient_black"
+        android:alpha="1"></FrameLayout>
+
+    <RelativeLayout
+        android:id="@+id/rlEventName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/event_name_label"
-        android:textColor="@color/brown"
-        android:textStyle="bold"
-        android:textSize="20sp"
         android:layout_alignParentTop="true"
-        android:background="@drawable/gradient_white"
-        android:maxLines="1"
+        android:layout_toRightOf="@+id/rlDay"
         android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:paddingBottom="15dp">
+
+        <TextView
+            android:id="@+id/tvEventName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/event_name_label"
+            android:textColor="@color/white"
+            android:textStyle="normal"
+            android:textSize="28sp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_alignParentTop="true"
+            android:gravity="center"
+            />
+
+    </RelativeLayout>
 
 
     <RelativeLayout
@@ -51,7 +70,7 @@
             android:text="SUN"
             android:textSize="36sp"
             android:textColor="@color/badgeText"
-            android:background="@drawable/gradient_pink"
+            android:background="@drawable/gradient_brown"
             android:layout_centerHorizontal="true"
             android:paddingTop="10dp"
             android:paddingBottom="7dp"
@@ -65,10 +84,10 @@
             android:text="YES"
             android:textSize="26sp"
             android:textColor="@color/badgeText"
-            android:background="@drawable/gradient_brown"
+            android:background="@drawable/gradient_teal"
             android:layout_centerHorizontal="true"
-            android:paddingTop="10dp"
-            android:paddingBottom="7dp"
+            android:paddingTop="25dp"
+            android:paddingBottom="22dp"
             android:layout_below="@+id/tvDay"
             />
 
@@ -80,10 +99,10 @@
         android:layout_width="@dimen/badge_width"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:gravity="center_vertical"
-        android:layout_below="@+id/tvEventName"
         android:layout_above="@+id/rlDay"
-        android:background="@drawable/gradient_teal"
+        android:background="@drawable/gradient_brown"
         >
 
         <TextView
@@ -119,7 +138,7 @@
 
 
     <RelativeLayout
-        android:layout_below="@id/tvEventName"
+        android:layout_below="@id/rlEventName"
         android:layout_alignTop="@+id/rlBadge"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
