--- a/app/src/main/res/drawable/gradient_black.xml
+++ b/app/src/main/res/drawable/gradient_black.xml
@@ -3,6 +3,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="@color/brown" android:endColor="#00000000"
+        android:startColor="#99000000" android:endColor="#00000000"
         android:angle="-90"/>
 </shape>
