--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,12 @@
         >
 
         <ImageView
-            android:layout_width="400dp"
-            android:layout_height="400dp"
+            android:layout_width="406dp"
+            android:layout_height="406dp"
             android:src="@drawable/bg_menu"
-            android:scaleType="fitStart"
-            android:layout_marginLeft="-180dp"
-            android:layout_marginTop="-50dp"/>
+            android:scaleType="matrix"
+            android:layout_marginLeft="-184dp"
+            android:layout_marginTop="-54dp"/>
 
         <ListView android:id="@+id/lvDrawer"
             android:layout_width="match_parent"
