--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,9 +1,22 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.chicktech.chicktech.fragments.ProfileFragment"
     android:orientation="vertical">
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/pbLoading"
+        android:indeterminate="true"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:id="@+id/svProfile">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -57,19 +70,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/etName"
                 android:layout_alignBottom="@+id/imgPhoto"
-                android:singleLine="false"
-                android:layout_toLeftOf="@+id/btnEdit"
-                android:layout_toStartOf="@+id/btnEdit" />
+                android:singleLine="false" />
 
-            <Button
-                android:layout_width="67dp"
-                android:layout_height="67dp"
-                android:id="@+id/btnEdit"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                style="?android:attr/borderlessButtonStyle"
-                android:background="@drawable/btn_edit" />
 
         </RelativeLayout>
 
@@ -210,11 +212,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start|top"
-                android:id="@+id/flWhat">
+                android:id="@+id/flWhat"
+                android:layout_marginBottom="50dp">
 
             </com.wefika.flowlayout.FlowLayout>
 
         </LinearLayout>
     </LinearLayout>
+    </ScrollView>
 
-</ScrollView>
+    <Button
+        android:layout_width="67dp"
+        android:layout_height="67dp"
+        android:id="@+id/btnEdit"
+        style="?android:attr/borderlessButtonStyle"
+        android:background="@drawable/btn_edit"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp" />
+
+</RelativeLayout>
