--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -141,6 +141,14 @@
             />
     </LinearLayout>
 
+    <ProgressBar
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="10dp"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbRSVPing"
+        android:indeterminate="false" />
 
     <ScrollView
         android:id="@+id/svDetails"
