Styled chat view #117

--- a/app/src/main/res/layout/item_chat_other.xml
+++ b/app/src/main/res/layout/item_chat_other.xml
@@ -7,16 +7,13 @@
         android:id="@+id/tvMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/pink"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="60dp"
         android:text="test message"
-        android:textColor="@android:color/white"
         android:clickable="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        style="@style/CTChatMessage.Theirs"/>
 
     <org.chicktech.chicktech.views.RoundedImageView
         android:id="@+id/ivProfileImage"
@@ -24,9 +21,9 @@
         android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         />
 
 </RelativeLayout>
