--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:padding="0dp"
     android:textIsSelectable="true"
-    android:background="#DDDDDD"
     tools:context="org.chicktech.chicktech.fragments.ChatFragment">
 
 
@@ -16,36 +15,44 @@
         android:stackFromBottom="true"
         android:transcriptMode="normal"
         android:divider="@null"
-        android:padding="0dp"
         android:layout_above="@+id/llComposeMessage" />
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/llComposeMessage"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="1dp"
+        android:background="@color/lightGray">
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#ffdddddd"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:padding="10dp">
 
         <EditText
             android:id="@+id/etMessage"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
+            android:minHeight="30dp"
             android:layout_weight="1"
             android:inputType="textMultiLine"
             android:lines="4"
             android:minLines="1"
-            android:scrollbars="vertical" >
+            android:scrollbars="vertical">
         </EditText>
 
         <Button
             android:id="@+id/btnSend"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/button_send"
-            android:layout_gravity="bottom" >
+            android:layout_width="30dp"
+            android:layout_height="29dp"
+            android:background="@drawable/ic_send"
+            android:layout_marginLeft="5dp"
+            style="?android:attr/borderlessButtonStyle"
+            >
         </Button>
     </LinearLayout>
+    </FrameLayout>
 
 </RelativeLayout>
