--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -7,15 +7,11 @@
             android:id="@+id/tvMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/teal"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:text="test message"
-            android:textColor="@android:color/white"
             android:clickable="true"
             android:layout_marginRight="10dp"
-
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_marginLeft="60dp"
+            style="@style/CTChatMessage"
             android:layout_toLeftOf="@+id/ivProfileImage"
             android:layout_centerVertical="true"/>
 
@@ -25,9 +21,9 @@
             android:layout_height="50dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="10dp"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentBottom="true"
             />
 
 </RelativeLayout>
