--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <item name="lightGray" type="color">#E7E7E7</item>
     <item name="darkGray" type="color">#9B9B9B</item>
     <item name="badgeText" type="color">#FFFFFF</item>
+    <item name="black_transparent" type="color">#AA000000</item>
 </resources>
