--- a/app/src/main/res/layout/activity_show_pop_up.xml
+++ b/app/src/main/res/layout/activity_show_pop_up.xml
@@ -3,7 +3,9 @@
     android:id="@+id/menuEditItemLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="25dp"
+    android:paddingTop="75dp"
+    android:paddingLeft="25dp"
+    android:paddingRight="25dp"
     android:gravity="center_horizontal"
     android:orientation="vertical" >
     <LinearLayout
@@ -18,10 +20,11 @@
             android:layout_gravity="center"
             android:text="Event Reminder"
             android:textColor="@color/teal"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="0dp"
             android:textSize="25sp" />
     </LinearLayout>
     <RelativeLayout
+        android:paddingTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true">
@@ -49,8 +52,10 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@id/ViewColorPickerHelper"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="@android:string/cancel"
+            android:background="@drawable/gradient_brown"
+            android:text="Not Now"
+            android:textColor="@color/white"
+            android:textSize="18sp"
             android:layout_alignParentBottom="true"/>
         <Button
             android:id="@+id/popOkB"
@@ -58,8 +63,10 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="@android:string/ok"
+            android:text="View Details"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:background="@drawable/gradient_brown"
             android:layout_alignParentBottom="true"
             android:layout_toRightOf="@id/ViewColorPickerHelper"/>
     </RelativeLayout>
