--- a/app/src/main/res/layout/activity_show_pop_up.xml
+++ b/app/src/main/res/layout/activity_show_pop_up.xml
@@ -26,7 +26,7 @@
     <RelativeLayout
         android:paddingTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="75dp"
         android:layout_alignParentBottom="true">
         <View
             android:layout_width="match_parent"
@@ -52,7 +52,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@id/ViewColorPickerHelper"
-            android:background="@drawable/gradient_brown"
+            android:background="#aaaaaa"
             android:text="Not Now"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -66,7 +66,7 @@
             android:text="View Details"
             android:textColor="@color/white"
             android:textSize="18sp"
-            android:background="@drawable/gradient_brown"
+            android:background="@drawable/gradient_teal"
             android:layout_alignParentBottom="true"
             android:layout_toRightOf="@id/ViewColorPickerHelper"/>
     </RelativeLayout>
