--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -297,6 +297,7 @@
                 android:text="@string/event_desc_label" />
 
             <Button
+                android:layout_marginTop="200dp"
                 android:id="@+id/btnPushRsvpReminder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
